# DeviceIntelligence

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
.github/workflows/: publish-github-packages.yml
deviceintelligence/: build.gradle.kts  consumer-rules.pro
deviceintelligence-gradle/: build.gradle.kts  settings.gradle.kts
deviceintelligence/src/main/: AndroidManifest.xml
deviceintelligence/src/main/cpp/: CMakeLists.txt
deviceintelligence/src/main/cpp/dicore/: analytics.cpp  analytics.h  apkmap.cpp  apkmap.h  art_integrity_jni.cpp  cloner_probe.cpp  cloner_probe.h  cloner_probe_jni.cpp  emu_probe.h  emu_probe_arm64.cpp  emu_probe_jni.cpp  emu_probe_x86_64.cpp  hex.cpp  hex.h  jni_bridge.cpp  log.h  native_integrity_jni.cpp  runtime_probe_jni.cpp  self_protect.cpp  self_protect.h  self_protect_jni.cpp  sha256.cpp  sha256.h  sigblock_parser.cpp  sigblock_parser.h  syscalls.cpp  syscalls.h  zip_parser.cpp  zip_parser.h
deviceintelligence/src/main/cpp/dicore/art_integrity/: offsets.cpp  offsets.h
deviceintelligence/src/main/cpp/dicore/native_integrity/: lib_inventory.cpp  lib_inventory.h
docs/: DETECTORS.md
gradle/: libs.versions.toml
samples/lsposed-tester/: build.gradle.kts
samples/lsposed-tester/src/main/assets/: xposed_init
samples/minimal/: build.gradle.kts
samples/minimal/keystore/: fake.jks
samples/minimal/src/main/: AndroidManifest.xml
samples/minimal/src/main/res/anim/: fade_out.xml
samples/minimal/src/main/res/drawable/: ic_alert.xml  ic_app_box.xml  ic_battery.xml  ic_braces.xml  ic_branch.xml  ic_calendar.xml  ic_check_circle.xml  ic_chip.xml  ic_clock.xml  ic_copy.xml  ic_cpu.xml  ic_device.xml  ic_diamond.xml  ic_display.xml  ic_eraser.xml  ic_globe.xml  ic_hash.xml  ic_inconclusive.xml  ic_launcher_background.xml  ic_launcher_monochrome.xml  ic_memory.xml  ic_package.xml  ic_play_services.xml  ic_plug.xml  ic_pulse_dot.xml  ic_radar.xml  ic_radar_sweep.xml  ic_refresh.xml  ic_sensor.xml  ic_shield.xml  ic_signature.xml  ic_sparkle.xml  ic_target.xml  ic_warning.xml
tools/: build_dist_apks.sh
tools/red-team/: CTF_ROADMAP.md  FLAG1_RUNBOOK.md  _verify_helper.js  dex-injection-disk.js  dex-injection-inmemory.js
tools/red-team/flag1-payload/: Payload.java  build-payload.sh  payload.dex
(+74 files in other folders)
